services/paas/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http_filters:
                  # - name: envoy.filters.http.ext_authz
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  #     http_service:
                  #       server_uri:
                  #         uri: 127.0.0.1:3862
                  #         cluster: dumb-auth
                  #         timeout: 0.5s
                  #       path_prefix: /auth?
                  #       authorization_request:
                  #         headers_to_add:
                  #           - key: x-original-uri
                  #             value: "%REQ(:path)%"
                  #     allowed_headers:
                  #       patterns:
                  #         - exact: Cookie
                  #           ignore_case: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    # - name: dumb-auth
    #   load_assignment:
    #     cluster_name: dumb-auth
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: 127.0.0.1
    #                   port_value: 3862
    - name: backend
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
